// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RulesTable should match a snapshot with no rules 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11 el-table"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11 el-table"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RulesTable should match a snapshot with rules 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="4"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Network Rule Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Network Rule Name
          </div>
          <div
            aria-label="Enabled"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Enabled
          </div>
          <div
            aria-label="Created"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Created
          </div>
          <div
            aria-label="Modified"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Modified
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name contact"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Network Rule Name"
              >
                MOCK_NAME
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Enabled"
              >
                <span
                  class="el-intent-success el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name check"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Created"
              >
                Invalid Date
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Modified"
              >
                Invalid Date
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="el-mb5 el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-danger el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Disable Rule
                  </button>
                  <button
                    class="el-intent-primary el-button"
                  >
<<<<<<< HEAD
                    <mock-styled.div />
=======
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    I Use PowerBI
                  </button>
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
>>>>>>> e83ceb437 (fix: RPLT-399 some housekeeping)
                    Create Whitelisted IP
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="4"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Network Rule Name"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Network Rule Name
        </div>
        <div
          aria-label="Enabled"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Enabled
        </div>
        <div
          aria-label="Created"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Created
        </div>
        <div
          aria-label="Modified"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Modified
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name contact"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5m0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Network Rule Name"
            >
              MOCK_NAME
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Enabled"
            >
              <span
                class="el-intent-success el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name check"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Created"
            >
              Invalid Date
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Modified"
            >
              Invalid Date
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="el-mb5 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-danger el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Disable Rule
                </button>
                <button
                  class="el-intent-primary el-button"
                >
<<<<<<< HEAD
                  <mock-styled.div />
=======
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  I Use PowerBI
                </button>
                <button
                  class="el-intent-primary el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
>>>>>>> e83ceb437 (fix: RPLT-399 some housekeeping)
                  Create Whitelisted IP
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RulesTable should match a snapshot with rules loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11 el-table"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11 el-table"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
